2012-10-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp (wallpaper): Handle no xinerama support
	case.

	* src/clfswm-internal.lisp (place-frames-from-xinerama-infos):
	Handle better no xinerama support case.

2012-10-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp (generate-wallpaper): Force waiting the
	end of convert.
	(wallpaper): Open a notify window to wait wallpaper creation.

	* src/clfswm.lisp (main-mode: configuer request): Call
	*root-size-change* hook on each root size change. This let CLFSWM
	refresh background wallpaper on root size changes.

	* src/clfswm-internal.lisp (place-frames-from-xinerama-infos):
	Handle root screen resize on the fly when adding or removing a
	monitor.

	* src/clfswm-menu.lisp (open-menu): Show key bindings also for
	menu entry.

2012-10-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (open-menu): Show key bindings
	correspondence in menu for main and second mode.

	* src/clfswm.lisp (main-loop): Reset X error count only once for
	all loops.

2012-10-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (handle-event): Ignore synchronous xlib
	window-error and drawable-error in event handler.

	* contrib/clfswm: Dump different image from different installation
	path.

2012-09-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (configure-request handler): Send a
	configuration notify event in a more precise way.

2012-09-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Limit X errors ignored
	to prevent freezes and add a backtrace system.

2012-09-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (configure-request handler): To be ICCCM
	compliant, send a fake configuration notify event only when the
	window has moved and not when it has been resized.

2012-09-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* Relase 1209
